# worlds-most-complicated-book-app

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 0664df66f604_indexing.py  0fb7d9d2fcd6_assosiating_a_list_of_books_to_user.py  221cf4ac610a_assosiating_a_list_of_books_to_user.py  25b637f2f3c7_add_book_tags_table.py  2732bafbd075_final_ig.py  28029c6de8af_assosiating_a_list_of_books_to_user.py  512837513639_review_addition.py  5fd2acc3dcc0_init.py  74a206c6c6c3_add_role_to_users_table.py  7940fa470349_password_exclusion.py  b6a146888267_init.py  bab0d3ac0112_add_user_uid_foreignkey_to_books.py  c97f085a1d93_assosiating_a_list_of_books_to_user.py  caa1c8250ffb_assosiating_a_list_of_books_to_user.py
src/: __init__.py  config.py  middleware.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/books/: models.py  routes.py  schemas.py  service.py
src/db/: main.py  models.py  redis.py
src/reviews/: routes.py  schemas.py  service.py
src/tags/: routes.py  service.py
